--- a/Worksheet/Index.html
+++ b/Worksheet/Index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+    <div class="box-1">
+        <h1>Hello World!</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, eveniet eum repellat dignissimos facere commodi harum ad dicta perferendis, deleniti esse provident neque aperiam nihil consequatur consequuntur ut praesentium illo sed dolor animi sapiente! Quasi pariatur sequi hic asperiores sapiente.</p>
+    </div>
+    <div class="box-2">
+    <h1>Goodbye World</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, eveniet eum repellat dignissimos facere commodi harum ad dicta perferendis, deleniti esse provident neque aperiam nihil consequatur consequuntur ut praesentium illo sed dolor animi sapiente! Quasi pariatur sequi hic asperiores sapiente.</p>
+</div>
+</div>
 </body>
 </html>
