--- a/Worksheet/Index.html
+++ b/Worksheet/Index.html
@@ -1,21 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-    <div class="box-1">
-        <h1>Hello World!</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, eveniet eum repellat dignissimos facere commodi harum ad dicta perferendis, deleniti esse provident neque aperiam nihil consequatur consequuntur ut praesentium illo sed dolor animi sapiente! Quasi pariatur sequi hic asperiores sapiente.</p>
-    </div>
-    <div class="box-2">
-    <h1>Goodbye World</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, eveniet eum repellat dignissimos facere commodi harum ad dicta perferendis, deleniti esse provident neque aperiam nihil consequatur consequuntur ut praesentium illo sed dolor animi sapiente! Quasi pariatur sequi hic asperiores sapiente.</p>
-</div>
-</div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="container">
+            <div class="box-1">
+                <h1>Hello World!</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At,
+                    eveniet eum repellat dignissimos facere commodi harum ad
+                    dicta perferendis, deleniti esse provident neque aperiam
+                    nihil consequatur consequuntur ut praesentium illo sed dolor
+                    animi sapiente! Quasi pariatur sequi hic asperiores
+                    sapiente.</p>
+            </div>
+            <div class="box-2">
+                <h1>Goodbye World</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At,
+                    eveniet eum repellat dignissimos facere commodi harum ad
+                    dicta perferendis, deleniti esse provident neque aperiam
+                    nihil consequatur consequuntur ut praesentium illo sed dolor
+                    animi sapiente! Quasi pariatur sequi hic asperiores
+                    sapiente.</p>
+                <a class="button" href>Read More</a>
+            </div>
+            <div class="categories">
+                <h2>categories</h2>
+                <ul>
+                    <li><a href="#">categories-1</a></li>
+                    <li><a href="#">categories-2</a></li>
+                    <li><a href="#">categories-3</a></li>
+                    <li><a href="#">categories-4</a></li>
+                    <li><a href="#">categories-5</a></li>
+                </ul>
+            </div>
+            <form class="my-form">
+                <div class="form-group">
+                    <label>Name:</label>
+                    <input type="text" name="name">
+                </div>
+                <div class="form-group">
+                    <label>Email:</label>
+                    <input type="text" name="Email">
+                </div>
+                <div class="form-group">
+                    <label>Message:</label>
+                    <textarea name="Message" id="Message" cols="30"
+                        rows="10"></textarea>
+                </div>
+                <input type="button" type="submit" value="submit" name>
+
+            </form>
+
+            <div class="block">
+                <h3>Heading</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Veniam dolore impedit perspiciatis consectetur sit ipsam
+                    nesciunt labore rerum sed consequuntur nemo culpa nam
+                    reprehenderit, unde ullam! Vel adipisci odit repellendus!</p>
+            </div>
+            <div class="block">
+                <h3>Heading</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Veniam dolore impedit perspiciatis consectetur sit ipsam
+                    nesciunt labore rerum sed consequuntur nemo culpa nam
+                    reprehenderit, unde ullam! Vel adipisci odit repellendus!</p>
+            </div>
+            <div class="block">
+                <h3>Heading</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Veniam dolore impedit perspiciatis consectetur sit ipsam
+                    nesciunt labore rerum sed consequuntur nemo culpa nam
+                    reprehenderit, unde ullam! Vel adipisci odit repellendus!</p>
+            </div>
+            <div class="clr">
+                <div id="main-block">
+                    
+                </div>
+            </div>
+        </div>
+        <div style="margin-top: 500px;"></div>
+    </body>
 </html>
